--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -3,6 +3,6 @@
   "item.mccourse.ferro_gel": "Ferrogel",
 
   "block.mccourse.ferro_gel_block": "Ferrogel Block",
-  "block.mccourse.stone_ferro_glint_ore": "Ferroglint Ore",
+  "block.mccourse.ferro_glint_ore": "Ferroglint Ore",
   "itemgroup.way_point_group": "Waypoint Group"
 }
